--- a/R Scripts/readme.html
+++ b/R Scripts/readme.html
@@ -1,3 +1,7 @@
+bird-workbench_UI.m20_prod.R
+
+# summary needed
+
 combine_birdnet_runs_2025_prod.r
 
 # This script:
@@ -10,3 +14,8 @@ combine_birdnet_runs_2025_prod.r
 # Creates a single-year FST file, and 
 # Combines it with other such files to create an all-years FST that's used as input by 
 #    the UI script.
+
+
+tiny_shiny.m20.R
+
+# summary needed
